--- a/Course/MissingSemester/01.md
+++ b/Course/MissingSemester/01.md
@@ -1,5 +1,17 @@
-# Unix Shell Command
+# 0001 - The Shell
 
-```shell
+```
 ls -lt semester | cut --delimiter=' ' -f6,7 > last-modified.txt
 ```
+
+# 0010 - Shell Tools and Scripting
+
+`"` and `'` delimiters
+```
+foo=bar
+echo "$foo"
+# prints bar
+echo '$foo'
+# prints $foo
+```
+
